# apis/installer/v1alpha1/ace_ace_types.go
@@ -58,6 +58,7 @@ type AceSpec struct {
 	KubedbUi     AceKubedbUi     `json:"kubedb-ui"`
 	PlatformApi  AcePlatformApi  `json:"platform-api"`
 	IngressNginx AceIngressNginx `json:"ingress-nginx"`
+	HTTPRoute    AceHTTPRoute    `json:"httpRoute"`
 	IngressDns   AceIngressDns   `json:"ingress-dns"`
 	Nats         AceNats         `json:"nats"`
 	NatsDns      AceNatsDns      `json:"nats-dns"`
@@ -135,6 +136,11 @@ type AcePlatformApi struct {
 type AceIngressNginx struct {
 	Enabled           bool `json:"enabled"`
 	*IngressNginxSpec `json:",inline,omitempty"`
+}
+
+type AceHTTPRoute struct {
+	Enabled        bool `json:"enabled"`
+	*HTTPRouteSpec `json:",inline,omitempty"`
 }
 
 type AceIngressDns struct {
