# apis/installer/v1alpha1/ace_inbox_ui_types.go
@@ -73,8 +73,9 @@ type InboxUiSpec struct {
 	Tolerations []core.Toleration `json:"tolerations"`
 	// If specified, the pod's scheduling constraints
 	// +optional
-	Affinity *core.Affinity  `json:"affinity"`
-	Ingress  PlatformIngress `json:"ingress"`
+	Affinity  *core.Affinity  `json:"affinity"`
+	Ingress   PlatformIngress `json:"ingress"`
+	HTTPRoute AppHTTPRoute    `json:"httpRoute"`
 	// +optional
 	Distro shared.DistroSpec `json:"distro"`
 }
