# apis/installer/v1alpha1/gh_ci_webhook_types.go
@@ -73,6 +73,7 @@ type GhCiWebhookSpec struct {
 	// +optional
 	Affinity     *core.Affinity     `json:"affinity"`
 	Ingress      AppIngress         `json:"ingress"`
+	HTTPRoute    AppHTTPRoute       `json:"httpRoute"`
 	Volumes      []core.Volume      `json:"volumes"`
 	VolumeMounts []core.VolumeMount `json:"volumeMounts"`
 	Args         []string           `json:"args"`
