# apis/installer/v1alpha1/offline_license_server_types.go
@@ -74,6 +74,7 @@ type OfflineLicenseServerSpec struct {
 	// +optional
 	Affinity     *core.Affinity     `json:"affinity"`
 	Ingress      AppIngress         `json:"ingress"`
+	HTTPRoute    AppHTTPRoute       `json:"httpRoute"`
 	Volumes      []core.Volume      `json:"volumes"`
 	VolumeMounts []core.VolumeMount `json:"volumeMounts"`
 	Args         []string           `json:"args"`
