# apis/installer/v1alpha1/smtprelay_types.go
@@ -79,6 +79,7 @@ type SmtprelaySpec struct {
 	Affinity   *core.Affinity `json:"affinity"`
 	Monitoring Monitoring     `json:"monitoring"`
 	Ingress    AppIngress     `json:"ingress"`
+	HTTPRoute  AppHTTPRoute   `json:"httpRoute"`
 	LogLevel   string         `json:"logLevel"`
 	Smtp       SMTPConfig     `json:"smtp"`
 	// +optional
