# charts/inbox-ui/values.openapiv3_schema.yaml
@@ -471,6 +471,60 @@ properties:
     type: object
   fullnameOverride:
     type: string
+  httpRoute:
+    properties:
+      annotations:
+        additionalProperties:
+          type: string
+        type: object
+      enabled:
+        type: boolean
+      gatewayClassName:
+        type: string
+      hosts:
+        items:
+          properties:
+            host:
+              type: string
+            paths:
+              properties:
+                path:
+                  type: string
+                pathType:
+                  enum:
+                  - Exact
+                  - PathPrefix
+                  - RegularExpression
+                  type: string
+              required:
+              - path
+              type: object
+          required:
+          - host
+          - paths
+          type: object
+        type: array
+      tls:
+        properties:
+          enabled:
+            type: boolean
+          secret:
+            properties:
+              name:
+                type: string
+            required:
+            - name
+            type: object
+        required:
+        - enabled
+        - secret
+        type: object
+    required:
+    - enabled
+    - gatewayClassName
+    - hosts
+    - tls
+    type: object
   image:
     properties:
       pullPolicy:
@@ -784,6 +838,7 @@ properties:
     type: array
 required:
 - autoscaling
+- httpRoute
 - image
 - ingress
 - replicaCount
